--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,186 @@
 @charset 'utf-8';
 
+:root {
+  --color-balck: rgb(29, 29, 31);
+  --color-gray: #888;
+  --color-darkorange: darkorange;
+}
+
 html {
-    font-family: 'Noto Sans KR', sans-serif;
-    font-size: 14px;
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 14px;
 }
 
 body {
-    /*가로 스크롤 X*/
-    overflow-x: hidden;
-    color: rgb(29, 29, 31);
-    /*자간 조절*/
-    letter-spacing: -0.05em;
-    background: white;
+  /*가로 스크롤 X*/
+  overflow-x: hidden;
+  color: var(--color-balck);
+  /*자간 조절*/
+  letter-spacing: -0.05em;
+  background: white;
 }
 
 p {
-    line-height: 1.6;
+  line-height: 1.6;
+}
+
+a {
+  color: var(--color-balck);
+  /*밑줄 제거*/
+  text-decoration: none;
 }
 
 .global-nav {
-    height: 44px;
+  height: 44px;
+  padding: 0 1rem;
+}
+
+.local-nav {
+  height: 52px;
+  padding: 0 1rem;
+  border-bottom: 1px solid #ddd;
 }
 
 .global-nav-links,
 .local-nav-links {
-    display: flex;
-    align-items: center;
-    max-width: 1000px;
-    height: 100%;
-    margin: 0 auto;
+  display: flex;
+  align-items: center;
+  max-width: 1000px;
+  height: 100%;
+  /*가운데 정렬*/
+  margin: 0 auto;
 }
 
 .global-nav-links {
-    justify-content: space-between;
+  justify-content: space-between;
 }
 
-.product-name {}
+.local-nav-links .product-name {
+  margin-right: auto;
+  font-size: 1.4rem;
+  font-weight: bold;
+}
+
+.local-nav-links a {
+  font-size: 0.8rem;
+}
+
+.local-nav-links a:not(.product-name) {
+  margin-left: 2em;
+}
+
+.scroll-section {
+  /*브라우저 창의 높이*/
+  padding-top: 50vh;
+}
+
+#scroll-section-0 h1 {
+  font-size: 4rem;
+  text-align: center;
+}
+
+.main-message {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 3em;
+  font-size: 2.5rem;
+}
+
+.main-message p {
+  font-weight: bold;
+  text-align: center;
+  line-height: 1.2;
+}
+
+.main-message small {
+  display: block;
+  margin-bottom: 0.5em;
+  font-size: 1.2rem;
+}
+
+#scroll-section-2 .main-message {
+  font-size: 3.5rem;
+}
+
+.description {
+  padding: 0 1rem;
+  font-size: 1.2rem;
+  color: var(--color-gray);
+}
+
+.description strong {
+  float: left;
+  /*em : 상위 요소 기준
+  -> 현재 내 폰트 사이즈의 비율을 활용할 수 있음 
+  rem : html 요소 기준 (root element)*/
+  margin-right: 0.2em;
+  font-size: 3rem;
+  color: var(--color-balck);
+}
+
+.desc-message {
+  width: 50%;
+  font-weight: bold;
+}
+
+.pin {
+  width: 1px;
+  height: 100px;
+  background: var(--color-balck);
+}
+
+.mid-message {
+  padding: 0 1rem;
+  font-size: 2rem;
+  color: var(--color-gray);
+}
+
+.mid-message strong {
+  color: var(--color-balck);
+}
+
+.canvas-caption {
+  padding: 0 1rem;
+  font-size: 1.2rem;
+  color: var(--color-gray);
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 7rem;
+  color: white;
+  background: var(--color-darkorange);
+}
+
+@media (min-width: 1024px) {
+  #scroll-section-0 h1 {
+    font-size: 9vw;
+  }
+
+  .main-message {
+    font-size: 4vw;
+  }
+
+  .description {
+    font-size: 2rem;
+  }
+
+  .description strong {
+    font-size: 6rem;
+  }
+
+  #scroll-section-2 .main-message {
+    font-size: 6vw;
+  }
+
+  .main-message small {
+    font-size: 1.5vw;
+  }
+
+  .desc-message {
+    width: 20%;
+  }
+}
