--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,13 @@ fixed를 사용했기 떄문에 js에서 처리해줘야 한다 */
   width: 100%;
 }
 
+#show-scene-0 #scroll-section-0 .sticky-elem,
+#show-scene-1 #scroll-section-1 .sticky-elem,
+#show-scene-2 #scroll-section-2 .sticky-elem,
+#show-scene-3 #scroll-section-3 .sticky-elem {
+  display: block;
+}
+
 @media (min-width: 1024px) {
   #scroll-section-0 h1 {
     font-size: 9vw;
