스크롤 애니메이션 구현 3

--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,10 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 5px 0;
   height: 3em;
   font-size: 2.5rem;
+  opacity: 0;
 }
 
 .main-message p {
