--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  top: 35vh;
   margin: 5px 0;
   height: 3em;
   font-size: 2.5rem;
@@ -177,7 +178,6 @@ fixed를 사용했기 떄문에 js에서 처리해줘야 한다 */
 .sticky-elem {
   display: none;
   position: fixed;
-  top: 0;
   left: 0;
   width: 100%;
 }
