--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,16 @@ a {
   background: var(--color-balck);
 }
 
+#scroll-section-2 .b {
+  top: 10%;
+  left: 40%;
+}
+
+#scroll-section-2 .c {
+  top: 15%;
+  left: 45%;
+}
+
 .mid-message {
   max-width: 1000px;
   margin: 0 auto;
@@ -216,6 +226,15 @@ fixed를 사용했기 떄문에 js에서 처리해줘야 한다 */
 
   .desc-message {
     width: 20%;
+  }
+
+  #scroll-section-2 .b {
+    top: 20%;
+    left: 53%;
+  }
+  
+  #scroll-section-2 .c {
+    left: 55%;
   }
 
   /*vw : 변환*/
