--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@ a {
 .scroll-section {
   /*브라우저 창의 높이*/
   padding-top: 50vh;
-  border: 5px solid red;
 }
 
 #scroll-section-0 h1 {
@@ -194,16 +193,22 @@ fixed를 사용했기 떄문에 js에서 처리해줘야 한다 */
   width: 100%;
 }
 
-.sticky-elem-canvas {
-  top: 0;
-  background: #888;
-}
-
 #show-scene-0 #scroll-section-0 .sticky-elem,
 #show-scene-1 #scroll-section-1 .sticky-elem,
 #show-scene-2 #scroll-section-2 .sticky-elem,
 #show-scene-3 #scroll-section-3 .sticky-elem {
   display: block;
+}
+
+.sticky-elem-canvas {
+  top: 0;
+  height: 100%;
+}
+
+.sticky-elem-canvas canvas {
+  position: absolute;
+  top: 50%;
+  left: 50%;
 }
 
 @media (min-width: 1024px) {
