--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,15 @@ fixed를 사용했기 떄문에 js에서 처리해줘야 한다 */
   left: 50%;
 }
 
+.image-blend-canvas {
+}
+
+#scroll-section-3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;  
+}
+
 @media (min-width: 1024px) {
   #scroll-section-0 h1 {
     font-size: 9vw;
