--- a/css/style.css
+++ b/css/style.css
@@ -234,8 +234,12 @@ fixed를 사용했기 떄문에 js에서 처리해줘야 한다 */
   left: 0;
   z-index: 100;
   background: white;
-  opacity: 1;
+  opacity: 0;
   transition: 0.5s;
+}
+
+.before-load .loading {
+  opacity: 1;
 }
 
 @keyframes loading-spin {
