스크롤에 따른 캔버스 포지션 변경

--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,11 @@ fixed를 사용했기 떄문에 js에서 처리해줘야 한다 */
   align-items: center;
 }
 
+.image-blend-canvas.sticky {
+  position: fixed;
+  top: 0;
+}
+
 .loading {
   display: flex;
   align-items: center;
