--- a/css/style.css
+++ b/css/style.css
@@ -138,12 +138,6 @@ a {
   color: var(--color-balck);
 }
 
-.desc-message {
-  width: 50%;
-  font-weight: bold;
-  opacity: 0;
-}
-
 .pin {
   width: 1px;
   height: 100px;
@@ -174,7 +168,7 @@ a {
 
 .canvas-caption {
   max-width: 1000px;
-  margin: 0 auto;
+  margin: -8em auto 0;
   padding: 0 1rem;
   font-size: 1.2rem;
   color: var(--color-gray);
@@ -225,6 +219,12 @@ fixed를 사용했기 떄문에 js에서 처리해줘야 한다 */
 .image-blend-canvas.sticky {
   position: fixed;
   top: 0;
+}
+
+.desc-message {
+  width: 50%;
+  font-weight: bold;
+  opacity: 0;
 }
 
 .loading {
@@ -299,6 +299,7 @@ fixed를 사용했기 떄문에 js에서 처리해줘야 한다 */
   }
 
   .description {
+    padding: 0;
     font-size: 2rem;
   }
 
@@ -329,11 +330,14 @@ fixed를 사용했기 떄문에 js에서 처리해줘야 한다 */
 
   /*vw : 변환*/
   .mid-message {
+    padding: 0;
+    width: 1000px;
     font-size: 4vw;
   }
 
   /*rem : 고정*/
   .canvas-caption {
+    padding: 0;
     font-size: 2rem;
   }
 }
